v2.7 (unreleased)
- openpgpkey: Add --keyid option to select key on keyid [Paul]
- openpgpkey: fix --rootanchor option handling [Ondřej Surý]
- openpgpkey: print keyid as bind zone style comment [Carsten Strotmann]
- sshfp: Ignore 4th column in known_hosts [Jean-Michel Nirgal Vourgère]

v2.6 (Jan 6, 2015))
- openpgpkey: Added --fetch option to fetch a public key from DNS [Paul]
- openpgpkey: Update rrtype from private use to IANA allocation (#61) [Paul]
- openpgpkey: Remove no longer needed --rrtype option [Paul]
- openpgpkey: Ignore uft-8/iso-8859-1 encoding errors in keyring data [Paul]
- openpgpkey: Add --uid option to override id check in received key data [Paul]
- openpgpkey: fix 0x99 (') character problems in base64 [Paul]
- openpgpkey: Fix OPENPGPKEY native base64 output to be correct [Paul]
- sshfp: Support for RFC 6594 [Gerald Turner]
- sshfp: Support for draft-moonesamy-sshfp-ed25519-01 [Gerald Turner]
- tlsa: New option --rootkey and --dlvkey [Paul]
- tlsa: Try to find rootkey in various locations in achor or key format [Paul]
- tlsa: abort unsupported STARTTLS on port 25 (rhbz#1010276) [Paul]
- ipseckey: new command for generating RFC-4025 IPSECKEY records [Paul]

v2.5 (Jan 14, 2014)
- Updated openpgpkey support for new draft-wouters-openpgpkey-02 [Paul]

v2.4 (Jan 6, 2014)
- add --rrtype and --rootanchor support, some cleanup, to openpgpkey [Paul]

v2.3 (Dec 31, 2013)
- Added openpgpkey support [Paul]

v2.2 (June 24, 2013)
- quiet (-q) is the new default, use -v to get verbose output [Paul]
- tlsa: fix --ipv4/--ipv6 options. Assume both if none specified
- tlsa: Usage 0 fix and M2Crypto path fix [Patrick]

v2.1 (Sep 15, 2012)
- Clarify that the license is GPLv2+

v2.0 (Aug 24, 2012)
- Initial release of hash-slinger
- Pulled in sshfp from the sshfp package
- Pulled in swede as tlsa from github
- Added tlsa man page